# chip8-rp2040

./: .gitmodules  CMakeLists.txt  chip8.c
include/chip8/: version.h.in
rom_server/: send_roms.py
